--- a/index.html
+++ b/index.html
@@ -5,75 +5,189 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ежедневные отчёты</title>
   <style>
+    :root {
+      --bg-primary: #ffffff;
+      --bg-secondary: #f8f9fa;
+      --text-primary: #212529;
+      --text-secondary: #495057;
+      --border-color: #dee2e6;
+      --card-bg: #ffffff;
+      --button-bg: #6a5acd;
+      --button-hover: #5a4fcf;
+      --accent: #ff6f61;
+      --chart-bg: rgba(106, 90, 205, 0.15);
+      --entry-bg: #e6e1ff;
+      --shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    [data-theme="dark"] {
+      --bg-primary: #121212;
+      --bg-secondary: #1e1e1e;
+      --text-primary: #f0f0f0;
+      --text-secondary: #b0b0b0;
+      --border-color: #333;
+      --card-bg: #252525;
+      --button-bg: #8a7bff;
+      --button-hover: #7a6aff;
+      --accent: #ff7e70;
+      --chart-bg: rgba(138, 123, 255, 0.2);
+      --entry-bg: #302a4a;
+      --shadow: 0 4px 16px rgba(0,0,0,0.3);
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: 'Segoe UI', system-ui, sans-serif;
+      background-color: var(--bg-primary);
+      color: var(--text-primary);
       margin: 0;
       padding: 1rem;
-      background-color: #f9f9f9;
-      color: #333;
+      transition: background-color 0.3s, color 0.3s;
     }
+
     header {
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-bottom: 1.5rem;
+      flex-wrap: wrap;
     }
+
+    h1 {
+      margin: 0;
+      font-size: 1.8rem;
+      background: linear-gradient(90deg, #6a5acd, #ff6f61);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      font-weight: 700;
+    }
+
+    #theme-toggle {
+      background: var(--button-bg);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 44px;
+      height: 44px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.2s;
+    }
+
+    #theme-toggle:hover {
+      background: var(--button-hover);
+    }
+
     section {
-      background: white;
-      padding: 1rem;
-      margin-bottom: 1.2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      background: var(--card-bg);
+      padding: 1.2rem;
+      margin-bottom: 1.4rem;
+      border-radius: 14px;
+      box-shadow: var(--shadow);
+      transition: background 0.3s, box-shadow 0.3s;
     }
+
     h2 {
       margin-top: 0;
-      font-size: 1.3rem;
+      font-size: 1.35rem;
+      color: var(--text-primary);
+      margin-bottom: 1rem;
+      font-weight: 600;
     }
+
     label {
       display: block;
-      margin: 0.6rem 0 0.3rem;
-      font-weight: 500;
+      margin: 0.7rem 0 0.4rem;
+      font-weight: 600;
+      color: var(--text-secondary);
     }
-    input, button {
+
+    input {
       width: 100%;
-      padding: 0.5rem;
-      margin-bottom: 0.6rem;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      padding: 0.65rem;
+      border: 1px solid var(--border-color);
+      border-radius: 10px;
+      background: var(--bg-secondary);
+      color: var(--text-primary);
+      font-size: 1rem;
     }
+
+    input::placeholder {
+      color: var(--text-secondary);
+      opacity: 0.7;
+    }
+
     button {
-      background-color: #2196F3;
+      background: var(--button-bg);
       color: white;
-      font-weight: bold;
       border: none;
+      border-radius: 10px;
+      padding: 0.75rem;
+      font-size: 1rem;
+      font-weight: 600;
       cursor: pointer;
       transition: background 0.2s;
     }
+
     button:hover {
-      background-color: #1976D2;
+      background: var(--button-hover);
     }
+
+    #total-value {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: var(--accent);
+      margin: 0;
+    }
+
     #calendar-entries {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-      gap: 0.6rem;
+      gap: 0.8rem;
     }
+
     .entry {
-      background: #e3f2fd;
-      padding: 0.6rem;
-      border-radius: 6px;
-      font-size: 0.85rem;
+      background: var(--entry-bg);
+      padding: 0.8rem;
+      border-radius: 10px;
       text-align: center;
+      font-size: 0.88rem;
+      font-weight: 600;
+      transition: transform 0.2s;
     }
+
+    .entry:hover {
+      transform: translateY(-2px);
+    }
+
+    .entry strong {
+      display: block;
+      color: var(--button-bg);
+      margin-bottom: 0.2rem;
+    }
+
     #report-chart {
       width: 100% !important;
-      max-width: 600px;
-      height: 200px !important;
+      max-width: 700px;
+      height: 220px !important;
+      margin-top: 0.5rem;
     }
+
     @media (max-width: 600px) {
-      body {
-        padding: 0.8rem;
+      header {
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-start;
       }
-      input, button {
-        padding: 0.6rem;
+      h1 {
+        font-size: 1.6rem;
       }
     }
   </style>
@@ -81,16 +195,17 @@
 <body>
   <header>
     <h1>📊 Ежедневные отчёты</h1>
+    <button id="theme-toggle" aria-label="Сменить тему">🌓</button>
   </header>
 
   <main>
     <section id="input-section">
-      <h2>Добавить запись</h2>
+      <h2>➕ Добавить запись</h2>
       <label for="category">Категория</label>
-      <input type="text" id="category" placeholder="Напр.: Еда, Транспорт, Доход...">
+      <input type="text" id="category" placeholder="Напр.: Еда, Доход, Спорт...">
 
       <label for="product">Продукт / Услуга</label>
-      <input type="text" id="product" placeholder="Название">
+      <input type="text" id="product" placeholder="Что именно?">
 
       <label for="value">Показатель (число)</label>
       <input type="number" id="value" placeholder="0" step="any">
@@ -98,52 +213,62 @@
       <label for="report-date">Дата</label>
       <input type="date" id="report-date">
 
-      <button id="add-btn">Добавить запись</button>
+      <button id="add-btn">💾 Сохранить запись</button>
     </section>
 
     <section id="summary">
-      <h2>Общие показатели</h2>
-      <p id="total-value" style="font-size: 1.4rem; font-weight: bold;">Всего: 0</p>
+      <h2>📈 Общий итог</h2>
+      <p id="total-value">Всего: 0</p>
     </section>
 
     <section id="calendar">
-      <h2>Календарь записей</h2>
-      <div id="calendar-entries">Нет записей</div>
+      <h2>📅 Записи по дням</h2>
+      <div id="calendar-entries">Нет данных</div>
     </section>
 
     <section id="chart">
-      <h2>График по дням</h2>
+      <h2>📊 График динамики</h2>
       <canvas id="report-chart"></canvas>
     </section>
   </main>
 
-  <!-- Chart.js из CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <script>
+    // Тема
+    const themeToggle = document.getElementById('theme-toggle');
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    document.documentElement.setAttribute('data-theme', savedTheme);
+    themeToggle.textContent = savedTheme === 'light' ? '🌓' : '🌕';
+
+    themeToggle.addEventListener('click', () => {
+      const current = document.documentElement.getAttribute('data-theme');
+      const newTheme = current === 'light' ? 'dark' : 'light';
+      document.documentElement.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+      themeToggle.textContent = newTheme === 'light' ? '🌓' : '🌕';
+    });
+
     // Установка сегодняшней даты
     const today = new Date().toISOString().split('T')[0];
     document.getElementById('report-date').value = today;
 
-    // Загрузка данных из localStorage
+    // Данные
     let reports = JSON.parse(localStorage.getItem('dailyReports')) || [];
 
-    // Сохранение в localStorage
     function saveReports() {
       localStorage.setItem('dailyReports', JSON.stringify(reports));
     }
 
-    // Обновление итога
     function updateSummary() {
       const total = reports.reduce((sum, r) => sum + Number(r.value), 0);
       document.getElementById('total-value').textContent = `Всего: ${total.toFixed(2)}`;
     }
 
-    // Рендер календаря
     function renderCalendar() {
       const container = document.getElementById('calendar-entries');
       if (reports.length === 0) {
-        container.textContent = 'Нет записей';
+        container.textContent = 'Нет данных';
         return;
       }
 
@@ -155,44 +280,49 @@
 
       container.innerHTML = '';
       Object.keys(dateMap)
-        .sort((a, b) => new Date(b) - new Date(a)) // сначала новые
+        .sort((a, b) => new Date(b) - new Date(a))
         .forEach(date => {
+          const dayTotal = dateMap[date].toFixed(1);
+          const day = date.split('-')[2];
+          const month = date.split('-')[1];
+
           const div = document.createElement('div');
           div.className = 'entry';
-          const formattedDate = date.split('-').slice(1).join('.'); // ДД.ММ
-          div.innerHTML = `<strong>${formattedDate}</strong><br>Σ: ${dateMap[date].toFixed(1)}`;
+          div.innerHTML = `<strong>${day}.${month}</strong>${dayTotal}`;
           container.appendChild(div);
         });
     }
 
-    // График
     let reportChart = null;
     function renderChart() {
       const ctx = document.getElementById('report-chart').getContext('2d');
 
-      // Группировка по дате
       const dailyTotals = {};
       reports.forEach(r => {
         if (!dailyTotals[r.date]) dailyTotals[r.date] = 0;
         dailyTotals[r.date] += Number(r.value);
       });
 
-      const sortedDates = Object.keys(dailyTotals).sort((a, b) => new Date(a) - new Date(b));
+      const sortedDates = Object.keys(dailyTotals).sort();
       const labels = sortedDates.map(d => d.split('-').slice(1).join('.'));
       const data = sortedDates.map(d => dailyTotals[d]);
 
       if (reportChart) reportChart.destroy();
 
       reportChart = new Chart(ctx, {
-        type: 'bar',
+        type: 'line',
         data: {
           labels: labels,
           datasets: [{
             label: 'Сумма за день',
-            data: data,
-            backgroundColor: 'rgba(33, 150, 243, 0.7)',
-            borderColor: 'rgba(33, 150, 243, 1)',
-            borderWidth: 1
+             data,
+            borderColor: '#6a5acd',
+            backgroundColor: 'var(--chart-bg)',
+            borderWidth: 3,
+            pointBackgroundColor: '#ff6f61',
+            pointRadius: 5,
+            fill: true,
+            tension: 0.3
           }]
         },
         options: {
@@ -202,14 +332,20 @@
             legend: { display: false }
           },
           scales: {
-            y: { beginAtZero: true, ticks: { precision: 0 } },
-            x: { title: { display: true, text: 'Даты' } }
+            y: {
+              beginAtZero: true,
+              grid: { color: 'rgba(128,128,128,0.1)' },
+              ticks: { color: 'var(--text-secondary)' }
+            },
+            x: {
+              grid: { display: false },
+              ticks: { color: 'var(--text-secondary)' }
+            }
           }
         }
       });
     }
 
-    // Обработчик добавления
     document.getElementById('add-btn').addEventListener('click', () => {
       const category = document.getElementById('category').value.trim();
       const product = document.getElementById('product').value.trim();
@@ -217,7 +353,7 @@
       const date = document.getElementById('report-date').value;
 
       if (!category || !product || isNaN(value) || !date) {
-        alert('Пожалуйста, заполните все поля корректно.');
+        alert('Пожалуйста, заполните все поля.');
         return;
       }
 
@@ -227,7 +363,6 @@
       renderCalendar();
       renderChart();
 
-      // Сброс полей
       document.getElementById('category').value = '';
       document.getElementById('product').value = '';
       document.getElementById('value').value = '';
