--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       --button-bg: #6a5acd;
       --button-hover: #5a4fcf;
       --accent: #ff6f61;
-      --chart-bg: rgba(106, 90, 205, 0.15);
       --entry-bg: #e6e1ff;
       --shadow: 0 4px 12px rgba(0,0,0,0.08);
+      --danger-bg: #ff4d4d;
+      --danger-hover: #e63939;
     }
 
     [data-theme="dark"] {
@@ -30,9 +31,10 @@
       --button-bg: #8a7bff;
       --button-hover: #7a6aff;
       --accent: #ff7e70;
-      --chart-bg: rgba(138, 123, 255, 0.2);
       --entry-bg: #302a4a;
       --shadow: 0 4px 16px rgba(0,0,0,0.3);
+      --danger-bg: #ff5f5f;
+      --danger-hover: #ff4444;
     }
 
     * { box-sizing: border-box; }
@@ -85,6 +87,12 @@
       box-shadow: var(--shadow);
     }
 
+    h2 {
+      margin-top: 0;
+      font-size: 1.35rem;
+      font-weight: 600;
+    }
+
     label {
       display: block;
       margin: 0.7rem 0 0.4rem;
@@ -117,13 +125,22 @@
       cursor: pointer;
       transition: background 0.2s;
       width: 100%;
+      margin-top: 0.5rem;
     }
 
     button:hover {
       background: var(--button-hover);
     }
 
-    .product-item {
+    #clear-all {
+      background: var(--danger-bg);
+    }
+
+    #clear-all:hover {
+      background: var(--danger-hover);
+    }
+
+    .product-item, .daily-entry {
       background: var(--entry-bg);
       padding: 1rem;
       border-radius: 12px;
@@ -136,12 +153,13 @@
       color: var(--button-bg);
     }
 
-    .product-summary {
-      font-size: 0.95rem;
-      margin: 0;
-    }
-
     .hidden { display: none; }
+
+    .daily-date {
+      font-weight: bold;
+      color: var(--button-bg);
+      margin-bottom: 0.2rem;
+    }
 
     @media (max-width: 600px) {
       header { flex-direction: column; align-items: flex-start; gap: 1rem; }
@@ -180,10 +198,18 @@
       <button id="add-btn">💾 Сохранить</button>
     </section>
 
+    <!-- 🔹 НОВАЯ СЕКЦИЯ: ЕЖЕДНЕВНЫЕ ОТЧЁТЫ -->
+    <section id="daily-reports">
+      <h2>📆 Ежедневные отчёты</h2>
+      <div id="daily-list">Нет данных</div>
+    </section>
+
     <section id="products-stats">
       <h2>📈 Все продукты и статистика</h2>
       <div id="products-list">Нет данных</div>
     </section>
+
+    <button id="clear-all">🗑️ Полная очистка статистики</button>
   </main>
 
   <script>
@@ -193,7 +219,7 @@
     document.documentElement.setAttribute('data-theme', savedTheme);
     themeToggle.textContent = savedTheme === 'light' ? '🌓' : '🌕';
     themeToggle.addEventListener('click', () => {
-      const newTheme = savedTheme === 'light' ? 'dark' : 'light';
+      const newTheme = document.documentElement.getAttribute('data-theme') === 'light' ? 'dark' : 'light';
       document.documentElement.setAttribute('data-theme', newTheme);
       localStorage.setItem('theme', newTheme);
       themeToggle.textContent = newTheme === 'light' ? '🌓' : '🌕';
@@ -222,7 +248,6 @@
     // === Обновление выпадающих списков ===
     function updateCategorySelect() {
       const select = document.getElementById('category-select');
-      const newCategoryInput = document.getElementById('new-category');
       select.innerHTML = '<option value="">— Выберите или создайте —</option>';
       getUniqueCategories().forEach(cat => {
         const opt = document.createElement('option');
@@ -230,7 +255,6 @@
         opt.textContent = cat;
         select.appendChild(opt);
       });
-      newCategoryInput.value = '';
     }
 
     function updateProductSelect(category) {
@@ -251,10 +275,39 @@
         select.appendChild(opt);
       });
       newProductInput.classList.remove('hidden');
-      newProductInput.value = '';
     }
 
-    // === Обновление статистики по продуктам ===
+    // === Рендер ЕЖЕДНЕВНЫХ ОТЧЁТОВ ===
+    function renderDailyReports() {
+      const container = document.getElementById('daily-list');
+      if (reports.length === 0) {
+        container.textContent = 'Нет данных';
+        return;
+      }
+
+      // Сгруппировать по дате и посчитать сумму
+      const dailyTotals = {};
+      reports.forEach(r => {
+        if (!dailyTotals[r.date]) dailyTotals[r.date] = 0;
+        dailyTotals[r.date] += Number(r.value);
+      });
+
+      container.innerHTML = '';
+      Object.keys(dailyTotals)
+        .sort((a, b) => new Date(b) - new Date(a)) // новые сверху
+        .forEach(date => {
+          const total = dailyTotals[date].toFixed(2);
+          const [y, m, d] = date.split('-');
+          const formatted = `${d}.${m}`;
+
+          const div = document.createElement('div');
+          div.className = 'daily-entry';
+          div.innerHTML = `<div class="daily-date">${formatted}</div>Общая сумма: ${total}`;
+          container.appendChild(div);
+        });
+    }
+
+    // === Рендер СТАТИСТИКИ ПО ПРОДУКТАМ ===
     function renderProductsStats() {
       const container = document.getElementById('products-list');
       if (reports.length === 0) {
@@ -262,7 +315,6 @@
         return;
       }
 
-      // Группировка по категории → продукт
       const grouped = {};
       reports.forEach(r => {
         if (!grouped[r.category]) grouped[r.category] = {};
@@ -271,7 +323,6 @@
       });
 
       container.innerHTML = '';
-
       for (const category in grouped) {
         const catHeader = document.createElement('h3');
         catHeader.textContent = `🗂️ ${category}`;
@@ -289,18 +340,17 @@
           div.className = 'product-item';
           div.innerHTML = `
             <div class="product-title">${product}</div>
-            <p class="product-summary">Всего: ${total.toFixed(2)} • Последнее: ${lastEntry.value} (${lastEntry.date.split('-').slice(1).join('.')})</p>
+            <p>Всего: ${total.toFixed(2)} • Последнее: ${lastEntry.value} (${lastEntry.date.split('-').slice(1).join('.')})</p>
           `;
           container.appendChild(div);
         }
       }
     }
 
-    // === События ===
+    // === События полей ===
     document.getElementById('category-select').addEventListener('change', function() {
       const category = this.value;
       updateProductSelect(category);
-      document.getElementById('new-product').value = '';
     });
 
     document.getElementById('new-category').addEventListener('input', function() {
@@ -312,6 +362,7 @@
       }
     });
 
+    // === Добавление записи ===
     document.getElementById('add-btn').addEventListener('click', () => {
       const date = document.getElementById('report-date').value;
       const selectedCategory = document.getElementById('category-select').value;
@@ -331,9 +382,10 @@
       reports.push({ date, category, product, value });
       saveReports();
       updateCategorySelect();
+      renderDailyReports();
       renderProductsStats();
 
-      // Сброс
+      // Сброс форм
       document.getElementById('value').value = '';
       document.getElementById('new-category').value = '';
       document.getElementById('new-product').value = '';
@@ -343,8 +395,21 @@
       document.getElementById('new-product').classList.add('hidden');
     });
 
+    // === КНОПКА ОЧИСТКИ ===
+    document.getElementById('clear-all').addEventListener('click', () => {
+      if (confirm('⚠️ Вы уверены, что хотите удалить ВСЮ статистику? Это действие нельзя отменить!')) {
+        reports = [];
+        saveReports();
+        updateCategorySelect();
+        renderDailyReports();
+        renderProductsStats();
+        alert('Вся статистика удалена.');
+      }
+    });
+
     // === Инициализация ===
     updateCategorySelect();
+    renderDailyReports();
     renderProductsStats();
   </script>
 </body>
